Change manager overflow to auto to fix styling

--- a/public/src/scss/chat_room_manager.scss
+++ b/public/src/scss/chat_room_manager.scss
@@ -8,7 +8,7 @@ $MAX_NUMBER_OF_CHAT_ROOMS_OPEN: 10;
   bottom: 0;
   right: 0;
   left: 0;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   &.multiple-rooms {
     @for $i from 1 through $MAX_NUMBER_OF_CHAT_ROOMS_OPEN {
